# centralized-agent-platform

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: deploy-agent-core.yml  deploy-infra.yml  deploy-mcp-servers.yml  sync-configs.yml
agent-core/: Dockerfile  main.py  pyproject.toml
agent-core/auth/: __init__.py  context.py  validator.py
agent-core/config/: runtime.yaml
agent-core/graph/: __init__.py  builder.py
agent-core/services/: config_store.py  cosmos.py  foundry_client.py  guardrails.py  mcp_client.py  observability.py  runtime_config.py
angular-test-ui/: README.md  angular.json  package-lock.json  package.json  tsconfig.json
angular-test-ui/src/: index.html  main.ts  styles.css
angular-test-ui/src/app/: app.component.ts
app/: README.md  app-cloudops-bot.yaml  app-customer-support.yaml  app-internal-hr.yaml  app-sales-analytics.yaml
configurations/: README.md  app-cloudops-bot.json  app-customer-support.json  app-internal-hr.json  validate_configs.py
configurations/schemas/: application.schema.json
infrastructure/: README.md
infrastructure/environments/dev/: main.tf
infrastructure/environments/prod/: main.tf
infrastructure/modules/aca-environment/: README.md  main.tf
infrastructure/modules/cosmos-db/: README.md  main.tf
infrastructure/modules/role-assignments/: README.md  main.tf
mcp-servers/: README.md
mcp-servers/mcp-aws-s3/: Dockerfile  server.py
mcp-servers/mcp-azure-sql/: Dockerfile  index.js
mcp-servers/mcp-gcp-bigquery/: README.md
